# ofmhelper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ofmhelpers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ofmhelpers/aigenproviders/kaiai/: client.py  upload_cache.py
src/ofmhelpers/config/: scrapers.py
src/ofmhelpers/discord/: client.py
src/ofmhelpers/downloaders/: cookies.py  generic.py  images.py
src/ofmhelpers/gdrive/: authorize.py  client.py
src/ofmhelpers/scraping/: apify.py  models.py  post_exporter.py  post_scorer.py
src/ofmhelpers/utils/: metadata_cleaner.py  profile_loader.py  radio_comms_fx.py  sheets_to_columns.py
src/ofmhelpers/web/: approval_tokens.py  auth.py  battle_tested.py  helpers_registry.py  jobs.py  main.py  recovery.py  templates_config.py  todos.py
src/ofmhelpers/web/routers/: action_log.py  approve.py  auth.py  battle_tested.py  clean_image.py  cookies.py  download_assets.py  download_images.py  download_reels.py  el.py  fake_ai.py  file_manager.py  generate.py  helper_index.py  jobs_status.py  kling.py  nbp.py  radio_comms.py  (+7 more)
tests/: conftest.py  test_app_smoke.py  test_approval_tokens.py  test_approve_flow.py  test_auth.py  test_discord_client.py  test_download_assets.py  test_fake_ai.py  test_file_manager_kieai_out.py  test_gdrive_authorize.py  test_gdrive_client.py  test_generate_reuse.py  test_job_inputs.py  test_jobs_persistence.py  test_recovery.py  test_session_and_audit_log.py  test_task_helpers.py  test_todo.py  test_upload_cache.py
(+43 files in other folders)
