[project]
name = "ofmhelpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=3.0.2",
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "black>=26.5.1",
    "elevenlabs>=2.58.0",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scipy>=1.18.0",
    "soundfile>=0.14.0",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ofmhelpers"]
